--- a/res/layout/grid_item_permission_needed.xml
+++ b/res/layout/grid_item_permission_needed.xml
@@ -54,6 +54,6 @@
         android:layout_marginRight="@dimen/permissions_needed_metadata_allow_access_button_margin_end"
         android:layout_marginTop="@dimen/permissions_needed_metadata_allow_access_button_margin_top"
         android:text="@string/permission_needed_allow_access_button_label"
-        android:textColor="@color/material_white_100" />
+        android:textColor="@color/text_color" />
 
 </LinearLayout>
