--- a/res/values-notnight-v26/picker_colors.xml
+++ b/res/values-notnight-v26/picker_colors.xml
@@ -51,6 +51,6 @@
 
     <color name="individual_picker_background_color">@color/material_white_100</color>
 
-    <color name="toolbar_icon_color">@color/text_color_dark</color>
+    <color name="toolbar_icon_color">@color/text_color</color>
     <color name="toolbar_color">@color/material_white_100</color>
 </resources>
