--- a/res/drawable/gradient_background.xml
+++ b/res/drawable/gradient_background.xml
@@ -16,7 +16,7 @@
 -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient android:angle="270"
-        android:startColor="@color/translucent_black_lighter"
+        android:startColor="?android:attr/colorPrimary"
 
         android:endColor="@android:color/transparent"
         />
