--- a/res/drawable/preview_bottom_sheet_background.xml
+++ b/res/drawable/preview_bottom_sheet_background.xml
@@ -17,6 +17,6 @@
 -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle">
-    <solid android:color="@color/translucent_black"/>
+    <solid android:color="?android:attr/colorPrimary"/>
     <corners android:bottomLeftRadius="0dp" android:bottomRightRadius="0dp" android:topLeftRadius="@dimen/preview_bottom_sheet_corner_radius" android:topRightRadius="@dimen/preview_bottom_sheet_corner_radius"/>
 </shape>
