--- a/res/layout/activity_top_level_desktop.xml
+++ b/res/layout/activity_top_level_desktop.xml
@@ -66,7 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/current_wallpaper_bottom_sheet_layout_height"
             android:layout_gravity="bottom"
-            android:background="@color/translucent_black_90_alpha"
+            android:background="?android:attr/colorPrimary"
             android:minHeight="@dimen/current_wallpaper_bottom_sheet_explore_button_margin_top"
             android:orientation="vertical"
             android:visibility="gone"
