--- a/res/layout/lock_screen_preview.xml
+++ b/res/layout/lock_screen_preview.xml
@@ -19,7 +19,7 @@
     android:id="@+id/lock_overlay"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black_24_alpha">
+    android:background="?android:attr/colorPrimary">
 
     <ImageView
         android:id="@+id/lock_icon"
