--- a/res/layout/grid_item_image.xml
+++ b/res/layout/grid_item_image.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/grid_item_individual_label_padding_top"
         android:layout_marginBottom="@dimen/grid_item_individual_label_padding_bottom"
-        android:background="@color/category_title_scrim_color"
+        android:background="?android:attr/colorPrimary"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
