--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -33,7 +33,7 @@
     <color name="accent_color">@color/material_googblue500</color>
 
     <color name="status_bar_color">@color/material_black_100</color>
-    <color name="toolbar_color">#000000</color>
+    <color name="toolbar_color">?android:attr/colorPrimary</color>
 
     <color name="preview_pager_arrow_disabled">@android:color/darker_gray</color>
     <color name="preview_pager_background">@color/secondary_color</color>
