--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -20,7 +20,7 @@
         <item name="colorPrimary">?android:colorPrimary</item>
         <item name="colorControlActivated">?attr/colorPrimary</item>
         <item name="android:statusBarColor">?attr/colorPrimary</item>
-        <item name="android:navigationBarColor">@color/translucent_black</item>
+        <item name="android:navigationBarColor">?android:attr/colorPrimary</item>
         <item name="android:navigationBarDividerColor">@android:color/transparent</item>
         <item name="android:windowLightStatusBar">false</item>
 
@@ -29,7 +29,7 @@
 
         <item name="selectableItemBackground">?android:attr/selectableItemBackground</item>
         <item name="dialogPreferredPadding">24dp</item>
-        <item name="colorControlHighlight">@color/ripple_material_dark</item>
+        <item name="colorControlHighlight">?android:attr/colorPrimary</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="toolbarNavigationButtonStyle">@style/Widget.AppCompat.Toolbar.Button.Navigation</item>
@@ -65,11 +65,11 @@
 
         <item name="selectableItemBackground">?android:attr/selectableItemBackground</item>
         <item name="dialogPreferredPadding">24dp</item>
-        <item name="colorControlHighlight">@color/ripple_material_dark</item>
+        <item name="colorControlHighlight">?android:attr/colorPrimary</item>
         <item name="toolbarNavigationButtonStyle">@style/Widget.AppCompat.Toolbar.Button.Navigation</item>
 
         <!-- Set status bar and navigation buttons to be translucent. -->
-        <item name="android:colorPrimaryDark">@color/translucent_black</item>
+        <item name="android:colorPrimaryDark">?android:attr/colorPrimary</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
 
