WallpaperPicker2: Match backgrounds to device theme
Change-Id: I577e983e28b63483612a9cebf10f5d6f97c235b1

--- a/res/layout/fragment_category_selector.xml
+++ b/res/layout/fragment_category_selector.xml
@@ -24,6 +24,6 @@
     android:paddingHorizontal="@dimen/grid_edge_space"
     android:scrollbarSize="@dimen/grid_padding"
     android:scrollbarStyle="outsideOverlay"
-    android:scrollbarThumbVertical="@color/scrollbar_thumb_color_dark"
+    android:scrollbarThumbVertical="?android:attr/colorPrimary"
     android:scrollbars="vertical"
     app:layout_behavior="@string/bottom_sheet_behavior" />
